--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,4 @@
 ﻿{
-  "MicrosoftAppId": "c82a8f9c-0bd6-4c8a-8a37-af5c5bea4269",
-  "MicrosoftAppPassword": "]h^%x&r2{d_r-^e_viSzcVQ}"
+  "MicrosoftAppId": "APP_ID_FROM_CONFIGURATION",
+  "MicrosoftAppPassword": "APP_PASS_FROM_CONFIGURATION"
 }
